# wc-guide-backend

./: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml  test.yml
guide/: asgi.py  settings.py  urls.py  wsgi.py
guide/wc/: apps.py  models.py  serializers.py  utils.py  views.py
guide/wc/migrations/: 0001_initial.py  0002_rename_id_area_name.py  0003_other_otherarea.py
guide/wc/templatetags/: custom_filters.py
templates/rest_framework/: api.html
tests/: conftest.py
tests/data/: test.json  toilets_three.geojson  toilets_two.geojson
tests/wc/: test_utils.py  test_views.py
